--- a/index.css
+++ b/index.css
@@ -25,8 +25,10 @@
     display: block;
   }
 }
-@media only screen and (max-width: 992px) {
-  .collapse {
-    margin-left: 10px;
-  }
+
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Ensure the navbar appears above other content */
 }
