--- a/index.css
+++ b/index.css
@@ -17,7 +17,14 @@
 }
 
 .bg {
-  background: radial-gradient(circle, #38f9d7, #6fffe9, #5bc0eb);
+  background: radial-gradient(
+    circle,
+    #38f9d7,
+    #6fffe9,
+    #14fdd2,
+    #14e6fd,
+    #5bc0eb
+  );
 }
 
 @media only screen and (hover: hover) and (pointer: fine) and (min-width: 992px) {
