--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+#banner {
+  background-image: url("./images/websitebanner.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  aspect-ratio: 47/13;
+}
+
 .dropdown-item {
   color: rgba(255, 255, 255, 0.55);
 }
