--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 #banner {
+  background-color: grey;
   background-image: url("./images/websitebanner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
