--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 #banner {
-  background-image: url("./images/websitebanner.jpg");
+  background-color: white;
   background-repeat: no-repeat;
   background-size: cover;
   aspect-ratio: 47/13;
