--- a/index.css
+++ b/index.css
@@ -1,9 +1,19 @@
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/scss/_variables.scss";
+
 #banner {
   background-image: url("./images/websitebanner.jpg");
-  background-color: white;
+  background-color: var(--bs-white);
   background-repeat: no-repeat;
   background-size: cover;
   aspect-ratio: 47/13;
+}
+
+a {
+  color: var(--bs-danger);
+}
+
+a:hover {
+  color: var(--bs-purple);
 }
 
 .dropdown-item {
@@ -15,7 +25,7 @@
 }
 
 .dropdown-item.active {
-  color: #fff;
+  color: var(--bs-white);
   background-color: transparent;
 }
 
@@ -25,7 +35,7 @@
 }
 
 .autoComplete_wrapper {
-  width: 100% !important; /* Set your desired width */
+  width: 100% !important;
 }
 
 .autoComplete_wrapper > input {
@@ -63,6 +73,38 @@ mark {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 1000; /* Ensure the navbar appears above other content */
+    z-index: 1000;
   }
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .w-lg-25 {
+    width: 25% !important;
+  }
+  .w-lg-50 {
+    width: 50% !important;
+  }
+  .w-lg-75 {
+    width: 75% !important;
+  }
+  .w-lg-100 {
+    width: 100% !important;
+  }
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
 }
