--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+/* Bootstrap documentation https://getbootstrap.com/docs/5.3/getting-started/introduction/ */
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/scss/_variables.scss";
 
 a {
