--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /* Bootstrap documentation https://getbootstrap.com/docs/5.3/getting-started/introduction/ */
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/scss/_variables.scss";
-
+/* Link Color */
 a {
   color: var(--bs-danger);
 }
@@ -8,7 +8,7 @@ a {
 a:hover {
   color: var(--bs-purple);
 }
-
+/* Dropdown Menu */
 .dropdown-item {
   color: var(--bs-nav-link-color);
 }
@@ -21,12 +21,12 @@ a:hover {
   color: var(--bs-white);
   background-color: transparent;
 }
-
+/* Profile Image */
 .profile-img {
   width: 180px;
   border-radius: 10px;
 }
-
+/* Search */
 .autoComplete_wrapper {
   width: 100% !important;
 }
@@ -42,24 +42,18 @@ a:hover {
 mark {
   padding: 0 !important;
 }
-
+/* Background */
 .bg {
-  background: radial-gradient(
-    circle,
-    #38f9d7,
-    #6fffe9,
-    #14fdd2,
-    #14e6fd,
-    #5bc0eb
-  );
+  background: radial-gradient(circle, #38f9d7, #6fffe9, #14fdd2, #14e6fd, #5bc0eb);
 }
 
 /* Makes navbar stick to top of screen for large non mobile devices */
 @media only screen and (hover: hover) and (pointer: fine) and (min-width: 992px) {
+  /* Allows Dropdown Menu To Be Hoverable */
   .dropdown:hover .dropdown-menu {
     display: block;
   }
-
+  /* Allows Navbar To Stick To Top */
   .sticky {
     position: -webkit-sticky;
     position: sticky;
@@ -67,8 +61,9 @@ mark {
     z-index: 1000;
   }
 }
-
+/* Extra Small Devices ( Portrait Phones 575.99px and down ) */
 @media (max-width: 575.99px) {
+  /* Error Page Height */
   .full-page {
     min-height: calc(100vh - 112px - 255px);
   }
@@ -76,6 +71,7 @@ mark {
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+  /* Border Radius  */
   .rounded-sm-top {
     border-top-left-radius: var(--bs-border-radius);
     border-top-right-radius: var(--bs-border-radius);
@@ -84,6 +80,7 @@ mark {
     border-bottom-left-radius: var(--bs-border-radius);
     border-bottom-right-radius: var(--bs-border-radius);
   }
+  /* Error Page Height */
   .full-page {
     min-height: calc(100vh - 112px - 231px - 2rem);
   }
@@ -91,6 +88,7 @@ mark {
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+  /* Error Page Height */
   .full-page {
     min-height: calc(100vh - 112px - 183px - 2rem);
   }
@@ -98,6 +96,7 @@ mark {
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+  /* Widths */
   .w-lg-25 {
     width: 25% !important;
   }
@@ -110,6 +109,7 @@ mark {
   .w-lg-100 {
     width: 100% !important;
   }
+  /* Error Page Height */
   .full-page {
     min-height: calc(100vh - 112px - 76px - 2rem);
   }
