--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,17 @@
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css";
 
 /* Link Color */
-a:not(.nav-link, .navbar-brand, .dropdown-item) {
+a.link {
   color: red;
 
 }
 
-a:not(.nav-link, .navbar-brand, .dropdown-item):hover {
+a.link:hover {
 
   color: rgb(255, 98, 0);
 }
 
-a:not(.nav-link, .navbar-brand, .dropdown-item):visited{
+a.link:visited{
   color: rgb(255, 0, 234);
 }
 /* Dropdown Menu */
